# shell-hist

./: Cargo.toml  README.md
src/: main.rs  opts.rs  parse.rs
